--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-844.5KB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-302.9KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.26MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.43MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-228.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-387.8KB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-840.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-153.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-356.6KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.86MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.01MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.81MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-844.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-228.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-387.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
