--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-840.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-153.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-975.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-356.6KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.86MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.01MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
@@ -21,12 +16,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -36,12 +26,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -52,12 +37,7 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -75,12 +55,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -90,12 +65,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -106,12 +76,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
@@ -131,12 +96,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-840.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-153.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-356.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.86MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.01MB/s(Youtube:不良林)
