--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-584.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-975.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-491.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-694.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-962.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇮🇳 印度-266.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.54MB/s(Youtube:不良林), server: 193.108.117.24, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-584.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-975.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
       - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
