--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,9 +7,9 @@ external-controller: :9090
 proxies:
   - {name: 🇨🇦 加拿大-491.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-694.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-962.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇮🇳 印度-266.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.54MB/s(Youtube:不良林), server: 193.108.117.24, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-283.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -18,9 +18,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,9 +28,9 @@ proxy-groups:
     proxies:
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -39,9 +39,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -54,9 +54,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -64,9 +64,9 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -75,9 +75,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,9 +95,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇦 加拿大-491.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-694.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-962.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-266.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
