--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-609.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-228.7KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇦 加拿大-791.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-306.6KB/s(Youtube:不良林), server: 169.197.142.187, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-222.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-688.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-609.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-228.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-306.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
