--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-688.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-2.19MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇻🇳 越南-4.22MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.11MB/s(Youtube:不良林), server: bgj.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: bgj.azzhuangaping.tw}}
+  - {name: 🇬🇧 英国-5.88MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-3.90MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇺🇸 美国-305.4KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-688.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
